@@ -1,3 +1,8 @@
+2014-06-28  Carl Hetherington  <cth@carlh.net>
+
+	* Fix crash on analysing audio (and possibly DCP creation) with
+	resampled content.
+
 2014-06-27  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.71.0 released.
